Fixed main styling on mobile for contact.html

--- a/style.css
+++ b/style.css
@@ -86,17 +86,19 @@ main *:-moz-placeholder {color: #6a6969;}
 main *::-moz-placeholder {color: #6a6969;}
 main *:-ms-input-placeholder {color: #6a6969;}
 main h1 {
-    font-size: 2vw;
+    font-size: 5vw;
     font-weight: normal;
+    margin: 9.5vw 0;
 }
 main p,main li,main a,main input,main textarea,main button {
-    font-size: 1.4vw;
+    font-size: 3.5vw;
     text-align: justify;
+    margin: 7.5vw 0;
 }
-main p {line-height: 150%;}
+main p {line-height: 120%;}
 main li {line-height: 120%;}
 main a {
-    line-height: 150%;
+    line-height: 120%;
     text-decoration: none;
     color: #df5277;
 }
@@ -120,6 +122,47 @@ main input,main textarea,main button {
 .bkgrd-gifts-parties {
     background-image: url("assets/images/gifts-parties-background.png");
 }
+
+/*  Flexbox column layout styling  */
+.flex-container {
+    box-sizing: border-box;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 2vw 10vw;
+}
+.flex-container>* {
+    width: 100%;
+}
+.flex-item-baseline {
+    align-self: baseline;
+}
+.flex-mobile-hidden {
+    display: none;
+}
+.flex-container input,.flex-container textarea,.flex-container button {
+    margin: 3.8vw 0;
+}
+.flex-container form,.flex-container input,.flex-container textarea {
+    width: 100%;
+}
+.flex-container input,.flex-container button {
+    height: 8.75vw;
+}
+.flex-container textarea {
+    resize: none;
+    height: 17.5vw;
+}
+.flex-container button {
+    position: relative;
+    left: 100%;
+    transform: translateX(-100%);
+    width: 50%;
+    text-align: center;
+}
+
 
 /*  Column layouts styling  */
 .one-col {
@@ -389,6 +432,7 @@ main input,main textarea,main button {
     }
     main p,main li,main a,main input,main textarea,main button {
         font-size: 1.4vw;
+        margin: 0.5vw 0;
         text-align: justify;
     }
     main p {line-height: 150%;}
@@ -402,6 +446,18 @@ main input,main textarea,main button {
         display: block;
         border: none;
         background-color: #f5f5f5;
+    }
+    hr {display: none;}
+
+    /*  Flexbox column layout styling  */
+    .flex-container {
+        flex-direction: row;
+    }
+    .flex-item-1 {flex: 1;}
+    .flex-item-2 {flex: 2;}
+    .flex-item-3 {flex: 3;}
+    .flex-mobile-hidden {
+        display: block;
     }
 
     /*  Background image styling  */
